--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.10.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@stream-io/node-sdk": "^0.4.11",
     "@stream-io/video-react-sdk": "^1.10.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.18.2",
+    "lucide-react": "^0.474.0",
     "next": "14.2.23",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "svix": "^1.45.1"
+    "svix": "^1.45.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
